[project]
name = "comfyui-solricks"
description = "ComfyUI Video Anti-Aliasing Pack"
version = "0.2.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/SOLRICKS/comfyui-solricks"

[tool.comfy]
PublisherId = "solricks"
DisplayName = "comfyui-solricks"
Icon = "https://raw.githubusercontent.com/SOLRICKS/comfyui-solricks/main/logo.png"